# dso

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  Dockerfile  README.md  ReadMeOld.md  builddso.bash  dso.pc.in  package.xml
config/: kitti_odom.txt
evaluation/: associate.py  evaluate_ate_scale.py  tum-vi_run_all.py
launch/: debug_pgeneva.launch  debug_woosik.launch  kitti_general.launch  kitti_nate.launch  kitti_pgeneva.launch  kitti_woosiklee.launch
scripts/: ci-install-linux-deps.sh  ci-install-osx-deps.sh  dsoRun.py
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseInitializerStereo.cpp  CoarseInitializerStereo.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/Modifications/: ORBextractor.cc  ORBextractor.h  cornerEdgeHarris.cpp  cornerEdgeHarris.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/util/: DatasetReader.h  DatasetUndistorter.cpp  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
utils/: calibration.py  video_to_images.py
