<?xml version="1.0"?>
<package>
  <name>dso</name>
  <version>1.0.0</version>
  <description>
    Core DSO library
  </description>

  <author>Jakob Engel</author>
  <license>see http://vision.in.tum.de/dso</license>
  <maintainer email="engelj-@in-dot-tum-dot.de">
    Jakob Engel
  </maintainer>
  <!-- <review status="unreviewed" notes=""/> -->
  <url>http://vision.in.tum.de/dso</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
